Modifications du cv d'après les instructions données par Ahmed

--- a/web.html
+++ b/web.html
@@ -28,7 +28,7 @@
 
         <div class="right2">
             <h2><mark>Mes compétences</mark></h2>
-            <p align="justify">Insérer ici du texte ayant un minimum de sens afin de transmettre au lecteur une compréhension aussi précise que possibe de mes capacités en termes de développement. </br></br>Mes compétences se limitent pour le moment aux bases des codes HTML et CSS. Comme en témoigne cette première page de présentation. Des connaissances en développement Java vont suivre très bientôt !</p>
+            <p align="justify">Mes compétences se limitent pour le moment aux bases des codes HTML et CSS. Comme en témoigne cette première page de présentation. Des connaissances en développement Java vont suivre très bientôt !</p>
         </div>
       </div>
 
